--- a/snapchap/www/app/components/myFriends/myFriends.html
+++ b/snapchap/www/app/components/myFriends/myFriends.html
@@ -1,22 +1,26 @@
 <ion-view title="My Friends" id="my-friends-view">
 
     <ion-content>
+
         <nav>
           <button ui-sref="profile" id="my-friends-view_back-btn" class="back-btn"><</button>
           FRIENDS
         </nav>
+
         <form>
             <span class="magnifying-glass"></span>
             <input type="text" placeholder="Search">
         </form>
 
-        <ul><span>BEST FRIENDS</span>
+        <p class="heading">BEST FRIENDS</p>
+        <ul>
           <li>Best Friends</li>
         </ul>
 
-        <span>MY FRIENDS</span>
+        <p class="heading">MY FRIENDS</p>
         <ul ng-repeat="friend in friends">
           <li>{{friend.username}}</li>
         </ul>
+
     </ion-content>
 </ion-view>
