--- a/snapchap/www/app/components/profile/profile.html
+++ b/snapchap/www/app/components/profile/profile.html
@@ -1,10 +1,10 @@
 <ion-view title="Profile" id="profile-view">
 
     <ion-content>
-        <nav id="profile-view__nav-top">
-            <button id="profile-view__share-btn"></button>
-            <button id="profile-view__trophy-btn"></button>
-            <button id="profile-view__settings-btn" ui-sref="settings"></button>
+        <nav id="profile-view__nav-top" class="nav-top">
+            <button id="profile-view__share-btn" class="icon-btn"></button>
+            <button id="profile-view__trophy-btn" class="icon-btn"></button>
+            <button id="profile-view__settings-btn" class="icon-btn" ui-sref="settings"></button>
         </nav>
         <div id="profile-view__main-content">
           <img id="snap-confetti" src="img/snap-confetti.png">
