--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -4,7 +4,8 @@
         <button ui-sref="profile" id="settings-view_back-btn" class="back-btn"><</button>
         Settings
       </nav>
-      <ul><span>MY ACCOUNT</span>
+
+        <p class="heading">MY ACCOUNT</p>    <ul>
         <li>Name<button ui-sref="name" class="forward-btn">></button></li>
         <li>Username<button ui-sref="username" class="forward-btn">></button></li>
         <li>Birthday<button ui-sref="birthday" class="forward-btn">></button></li>
@@ -18,24 +19,28 @@
         <li style="color:gray">Memories</li>
       </ul>
 
-      <ul><span>ADDITIONAL SERVICES</span>
+      <p class="heading">ADDITIONAL SERVICES</p>
+      <ul>
         <li style="color:gray">Manage Preferences</li>
       </ul>
 
-      <ul><span>WHO CAN…</span>
+      <p class="heading">WHO CAN…</p>
+      <ul>
         <li style="color:gray">Contact Me</li>
         <li style="color:gray">View My Story</li>
         <li style="color:gray">See Me in Quick Add</li>
       </ul>
 
-      <ul><span>MORE INFORMATION</span>
+      <p class="heading">MORE INFORMATION</p>
+      <ul>
         <li style="color:gray">Support</li>
         <li style="color:gray">Privacy Policy</li>
         <li style="color:gray">Terms of Service</li>
         <li style="color:gray">Licenses</li>
       </ul>
 
-      <ul><span>ACCOUNT ACTIONS</span>
+      <p class="heading">ACCOUNT ACTIONS</p>
+      <ul>
         <li style="color:gray">Clear Cache</li>
         <li style="color:gray">Clear Conversations</li>
         <li style="color:gray">Restore Purchases</li>
