--- a/snapchap/www/app/components/logInSignUp/logInSignUp.html
+++ b/snapchap/www/app/components/logInSignUp/logInSignUp.html
@@ -1,15 +1,11 @@
-<ion-view title="Log In / Sign Up" hide-nav-bar="true" id="page3" style="background-color:#F8EF67;">
-    <ion-content padding="true" class="manual-ios-statusbar-padding">
-        <div class="spacer" style="height: 100px;"></div>
+<ion-view title="Log In / Sign Up" id="log-in-sign-up-view">
+    <ion-content>
+        <div id="log-in-sign-up-view__main">
+          <div id="log-in-sign-up-view__ghost"></div>
+        </div>
         <div>
-            <img src="img/Lb7qYiOBTMqpnE80uYPS_snapchat.png" width="50%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
-        </div>
-        <div class="spacer" style="width: 300px; height: 107px;"></div>
-        <div style="margin-right:-20px;">
-            <a ui-sref="logIn" id="logInSignUp-button15" style="left:-10px;font-weight:500;color:#FFFFFF;" class="button button-assertive button-large button-full">LOG IN</a>
-        </div>
-        <div style="margin-right:-20px;">
-            <a ui-sref="signUp" id="logInSignUp-button16" style="left:-10px;font-weight:500;" class="button button-calm button-large button-full">SIGN UP</a>
+          <button id="log-in-btn" ui-sref="logIn" class="btn log-in-sign-up-view__btn">LOG IN</button>
+          <button id="sign-up-btn" ui-sref="signUp" class="btn log-in-sign-up-view__btn">SIGN UP</button>
         </div>
     </ion-content>
 </ion-view>
