More styles and routes. Added views and fixed css. More icons. Better icons.

--- a/snapchap/www/app/components/addUsername/addUsername.html
+++ b/snapchap/www/app/components/addUsername/addUsername.html
@@ -1,3 +1,27 @@
-<ion-view title="Add Username" id="page12">
-    <ion-content padding="true" class="has-header"></ion-content>
+<ion-view title="Add Username" id="add-username-view">
+
+  <ion-content>
+
+    <nav>
+      <button ui-sref="profile" id="add-username-view_back-btn" class="back-btn"><</button>
+      Add Username
+    </nav>
+
+    <form id="add-username-view__form">
+        <span class="magnifying-glass"></span>
+        <input type="text" placeholder="Search">
+    </form>
+
+    <div class="add-username-view__text">
+      <p>username</p>
+      <p>is your username</p>
+    </div>
+
+    <div class="add-username-view__text">
+      <p>Display Name</p>
+      <p>is how you appear on Snapchat</p>
+    </div>
+
+  </ion-content>
+
 </ion-view>
