--- a/snapchap/www/app/components/editMessage/editMessage.html
+++ b/snapchap/www/app/components/editMessage/editMessage.html
@@ -1,3 +1,7 @@
-<ion-view title="Edit Message" id="editMessage">
-    <ion-content padding="true" class="has-header"></ion-content>
+<ion-view title="Edit Message" id="edit-message-view">
+    <ion-content>
+
+
+
+    </ion-content>
 </ion-view>
