--- a/snapchap/www/app/components/profile/profile.html
+++ b/snapchap/www/app/components/profile/profile.html
@@ -7,7 +7,7 @@
             <button id="profile-view__settings-btn" class="icon-btn" ui-sref="settings"></button>
         </nav>
         <div id="profile-view__main-content">
-          <img id="snap-confetti" src="img/snap-confetti.png">
+          <div id="snap-confetti"><span></span></div>
           <p id="profile-view__display-name" class="profile-view__display-name">Display Name</p>
           <p id="profile-view__username" class="profile-view__username">username</p>
 
