--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -2,10 +2,10 @@
     <ion-content>
       <nav>
         <button ui-sref="profile" id="settings-view_back-btn" class="back-btn"><</button>
-        Settings
+        <div class="nav-top-heading">Settings</div>
       </nav>
 
-        <p class="heading">MY ACCOUNT</p>    <ul>
+        <span class="heading">MY ACCOUNT</span>    <ul>
         <li>Name<button ui-sref="name" class="forward-btn">></button></li>
         <li>Username<button ui-sref="username" class="forward-btn">></button></li>
         <li>Birthday<button ui-sref="birthday" class="forward-btn">></button></li>
@@ -19,19 +19,19 @@
         <li style="color:gray">Memories</li>
       </ul>
 
-      <p class="heading">ADDITIONAL SERVICES</p>
+      <span class="heading">ADDITIONAL SERVICES</span>
       <ul>
         <li style="color:gray">Manage Preferences</li>
       </ul>
 
-      <p class="heading">WHO CAN…</p>
+      <span class="heading">WHO CAN…</span>
       <ul>
         <li style="color:gray">Contact Me</li>
         <li style="color:gray">View My Story</li>
         <li style="color:gray">See Me in Quick Add</li>
       </ul>
 
-      <p class="heading">MORE INFORMATION</p>
+      <span class="heading">MORE INFORMATION</span>
       <ul>
         <li style="color:gray">Support</li>
         <li style="color:gray">Privacy Policy</li>
@@ -39,7 +39,7 @@
         <li style="color:gray">Licenses</li>
       </ul>
 
-      <p class="heading">ACCOUNT ACTIONS</p>
+      <span class="heading">ACCOUNT ACTIONS</span>
       <ul>
         <li style="color:gray">Clear Cache</li>
         <li style="color:gray">Clear Conversations</li>
