--- a/snapchap/www/app/components/camera/camera.css
+++ b/snapchap/www/app/components/camera/camera.css
@@ -4,17 +4,25 @@
 }
 
 #camera-view__nav-bottom {
-  top: calc(100vh - 80px);
+  top: calc(100vh - 60px);
 }
 #camera-view__flash-btn {
   background-image: url('../../../img/icon/flash-white.png');
 }
 #camera-view__profile-btn {
-  background-image: url('../../../img/icon/snap-white.png');
+  background-image: url('../../../img/icon/snapchat-white.png');
 }
 #camera-view__switch-camera-btn {
   background-image: url('../../../img/icon/switch-white.png');
 }
+
+
+#camera-view__nav-bottom .icon-btn {
+  position: relative;
+  bottom: 7px;
+}
+
+
 #camera-view__chat-btn {
   background-image: url('../../../img/icon/chat-white.png');
 }
@@ -22,8 +30,6 @@
   background-image: url('../../../img/icon/circle-white-big.png');
   width: 70px;
   height: 70px;
-  position: relative;
-  bottom: 34px;
   -webkit-background-size: 70px;
           background-size: 70px;
 }
