--- a/snapchap/www/app/components/logInSignUp/logInSignUp.css
+++ b/snapchap/www/app/components/logInSignUp/logInSignUp.css
@@ -9,12 +9,12 @@
 #log-in-sign-up-view__ghost {
   position: relative;
   bottom: 17px;
-  height: 80px;
-  width: 80px;
-  background-image: url('../../../img/icon/ghost-big.png');
+  height: 75px;
+  width: 75px;
+  background-image: url('../../../img/icon/snapchat-bw.png');
   background-repeat: no-repeat;
-  -webkit-background-size: 80px;
-          background-size: 80px;
+  -webkit-background-size: 75px;
+          background-size: 75px;
 }
 
 .log-in-sign-up-view__btn {
