--- a/snapchap/www/app/components/settings/settings.css
+++ b/snapchap/www/app/components/settings/settings.css
@@ -1,39 +1,34 @@
-#settings-view nav {
+#settings-view .nav-top-heading {
   color: #00A686;
-  font-size: 1.4rem;
   text-align: center;
   padding: 18px;
-  border-bottom: thin solid lightgray;
+  border-bottom: thin solid rgba(150, 150, 150, 0.3);
   margin-top: 10px;
 }
 #settings-view .heading {
   display: flex;
   align-items: center;
   background-color: rgba(244, 244, 244, 1);
-  padding-left: 10px;
+  padding-left: 14px;
   width: 100vw;
-  height: 40px;
-  border-bottom: thin solid lightgray;
+  height: 34px;
+  border-bottom: thin solid rgba(150, 150, 150, 0.3);
   /*font-size: 0.85rem;*/
   color: #00A686;
+  margin-left: 0px;
 }
 #settings-view ul {
-  margin-left: 9px;
   font-size: 1.1rem;
 }
 #settings-view li {
   color: black;
-  padding: 13px 9px;
-  border-bottom: thin solid lightgray;
+  border-bottom: thin solid rgba(150, 150, 150, 0.3);
+  padding: 13px 14px;
 }
+
 #settings-view_back-btn {
   color: #00A686;
-  /*font-size: 1.7rem;
-  left: 15px;
-  top: 8px;*/
 }
 #settings-view .forward-btn {
-  /*position: absolute;
-  right: 15px;
-  color: gray;*/
+  color: gray;
 }
