Overhaul on styles and routes. Added views and styles. More icons. Reworked bottom nav bar (with CSS animations).

--- a/snapchap/www/app/components/addFriends/addFriends.html
+++ b/snapchap/www/app/components/addFriends/addFriends.html
@@ -3,7 +3,7 @@
   <ion-content>
 
     <nav>
-      <button ui-sref="profile" id="add-friends-view_back-btn" class="back-btn"><</button>
+      <button ui-sref="profile" id="add-friends-view__back-btn" class="back-btn" ng-click="showMenu()"><</button>
       Add Friends
     </nav>
 
