--- a/snapchap/www/app/components/addedMe/addedMe.html
+++ b/snapchap/www/app/components/addedMe/addedMe.html
@@ -3,7 +3,7 @@
     <ion-content>
 
       <nav>
-        <button ui-sref="profile" id="added-me-view_back-btn" class="back-btn"><</button>
+        <button ui-sref="profile" id="added-me-view_back-btn" class="back-btn" ng-click="showMenu()"><</button>
         Added Me
       </nav>
 
