--- a/snapchap/www/app/components/camera/camera.html
+++ b/snapchap/www/app/components/camera/camera.html
@@ -2,15 +2,14 @@
     <ion-content id="camera-view__content">
         <nav id="camera-view__nav-top" class="nav-top">
             <button id="camera-view__flash-btn" class="icon-btn"></button>
-            <button id="camera-view__profile-btn" class="icon-btn" ui-sref="profile"></button>
-            <button id="camera-view__switch-camera-btn" class="icon-btn"></button>
+            <button id="camera-view__profile-btn" class="icon-btn" ui-sref="profile" animate-profile-nav ng-click="addProfileNav()"></button>
+            <button id="camera-view__rear-camera-btn" class="icon-btn"></button>
         </nav>
 
-
-        <nav id="camera-view__nav-bottom" class="nav-bottom">
+        <!-- <nav id="camera-view__nav-bottom" class="nav-bottom">
             <button id="camera-view__chat-btn" class="icon-btn" ui-sref="chat"></button>
             <button id="camera-view__take-photo-btn" class="icon-btn"></button>
             <button id="camera-view__dots-btn" class="icon-btn"></button>
-        </nav>
+        </nav> -->
     </ion-content>
 </ion-view>
