--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -4,7 +4,7 @@
           <button id="chat-view__flash-btn" class="icon-btn"></button>
           <!-- <button id="chat-view__profile-btn" class="icon-btn" ui-sref="profile"></button> -->
           <div class="nav-top-heading">Chat</div>
-          <button id="chat-view__switch-camera-btn" class="icon-btn"></button>
+          <button id="chat-view__camera-btn" class="icon-btn" ui-sref="camera" animate-chat-nav ng-click="removeChattyNav()"></button>
       </nav>
 
       <form>
@@ -14,11 +14,11 @@
       </form>
 
 
-      <nav id="chat-view__nav-bottom" class="nav-bottom">
+      <!-- <nav id="chat-view__nav-bottom" class="nav-bottom">
           <button id="chat-view__chat-btn" class="icon-btn"></button>
           <button id="chat-view__take-photo-btn" class="icon-btn" ui-sref="camera"></button>
           <button id="chat-view__dots-btn" class="icon-btn"></button>
-      </nav>
+      </nav> -->
 
 
     </ion-content>
