--- a/snapchap/www/app/components/logInSignUp/logInSignUp.css
+++ b/snapchap/www/app/components/logInSignUp/logInSignUp.css
@@ -11,7 +11,7 @@
   bottom: 17px;
   height: 75px;
   width: 75px;
-  background-image: url('../../../img/icon/snapchat-bw.png');
+  background-image: url('../../../img/icon/snapchat-bw.gif');
   background-repeat: no-repeat;
   -webkit-background-size: 75px;
           background-size: 75px;
