--- a/snapchap/www/app/components/myFriends/myFriends.html
+++ b/snapchap/www/app/components/myFriends/myFriends.html
@@ -3,7 +3,7 @@
     <ion-content>
 
         <nav>
-          <button ui-sref="profile" id="my-friends-view_back-btn" class="back-btn"><</button>
+          <button ui-sref="profile" id="my-friends-view_back-btn" class="back-btn" ng-click="showMenu()"><</button>
           FRIENDS
         </nav>
 
