--- a/snapchap/www/app/components/camera/camera.css
+++ b/snapchap/www/app/components/camera/camera.css
@@ -3,25 +3,24 @@
   background-color: rgb(50, 50, 50);
 }
 
-#camera-view__nav-bottom {
-  top: calc(100vh - 60px);
-}
 #camera-view__flash-btn {
   background-image: url('../../../img/icon/flash-white.png');
 }
 #camera-view__profile-btn {
   background-image: url('../../../img/icon/snapchat-white.png');
 }
-#camera-view__switch-camera-btn {
-  background-image: url('../../../img/icon/switch-white.png');
+#camera-view__rear-camera-btn {
+  background-image: url('../../../img/icon/rear-camera-white.png');
 }
 
 
+#camera-view__nav-bottom {
+  top: calc(100vh - 60px);
+}
 #camera-view__nav-bottom .icon-btn {
   position: relative;
   bottom: 7px;
 }
-
 
 #camera-view__chat-btn {
   background-image: url('../../../img/icon/chat-white.png');
