Routes and views and CSS. Some directives added. Bower and ngCordova installed.

--- a/snapchap/www/app/components/birthday/birthday.html
+++ b/snapchap/www/app/components/birthday/birthday.html
@@ -18,7 +18,7 @@
           <ion-toggle toggle-class="toggle-positive">
             Birthday Party
             <div id="birthday-text">
-            Adds a cake next to your name on your<br> birthday, allows your friends to send you<br> Birthday Snaps, and some other fun<br> surprises. This does not reveal your age to<br> other Snapchatters.
+            Adds a 🎂 &nbsp;next to your name on your<br> birthday, allows your friends to send you<br> Birthday Snaps, and some other fun<br> surprises. This does not reveal your age to<br> other Snapchatters.
             </div>
           </ion-toggle>
 
