--- a/snapchap/www/app/components/logIn/logIn.html
+++ b/snapchap/www/app/components/logIn/logIn.html
@@ -19,7 +19,7 @@
         <p id="forgot-your-password" class="text-link">
           Forgot your password?
         </p>
-        <button id="log-in-view__log-in-btn" class="btn pill-btn" ui-sref="camera">Log In</button>
+        <button id="log-in-view__log-in-btn" class="btn pill-btn" ui-sref="camera" animate-profile-nav ng-click="showMenu(); removeProfileNav()">Log In</button>
       </div>
 
       <div id="log-in-view__keyboard"></div>
