--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -5,15 +5,15 @@
         <div class="nav-top-heading">Settings</div>
       </nav>
 
-      <span class="heading">MY ACCOUNT</span>    
+      <span class="heading">MY ACCOUNT</span>
       <ul>
-        <li>Name<button ui-sref="name" class="forward-btn">></button></li>
-        <li>Username<button ui-sref="username" class="forward-btn">></button></li>
-        <li>Birthday<button ui-sref="birthday" class="forward-btn">></button></li>
+        <li ui-sref="name">Name<button class="forward-btn">></button></li>
+        <li ui-sref="username">Username<button class="forward-btn">></button></li>
+        <li ui-sref="birthday">Birthday<button class="forward-btn">></button></li>
         <li style="color:gray">Mobile Number</li>
-        <li>Email<button ui-sref="birthday" class="forward-btn">></button></li>
+        <li ui-sref="email">Email<button class="forward-btn">></button></li>
         <li style="color:gray">Bitmoji</li>
-        <li>Password<button ui-sref="birthday" class="forward-btn">></button></li>
+        <li ui-sref="password">Password<button class="forward-btn">></button></li>
         <li style="color:gray">Login Verification</li>
         <li style="color:gray">Notifications</li>
         <li style="color:gray">Snapcash</li>
@@ -46,7 +46,7 @@
         <li style="color:gray">Clear Conversations</li>
         <li style="color:gray">Restore Purchases</li>
         <li style="color:gray">Blocked</li>
-        <li>Log Out<button ui-sref="birthday" class="forward-btn">></button></li>
+        <li ui-sref="logInSignUp">Log Out<button class="forward-btn">></button></li>
       </ul>
     </ion-content>
 </ion-view>
