--- a/snapchap/www/app/components/signUp/signUp.html
+++ b/snapchap/www/app/components/signUp/signUp.html
@@ -18,7 +18,7 @@
         <p id="sign-up-view__terms">
           By tapping Sign Up & Accept, you agree to the <span class="text-link">Terms of Service</span> and <span class="text-link">Privacy Policy</span>.
         </p>
-        <button id="sign-up-view__sign-up-btn" class="btn pill-btn" ui-sref="camera">Sign Up & Accept</button>
+        <button id="sign-up-view__sign-up-btn" class="btn pill-btn" ui-sref="camera" animate-profile-nav ng-click="showMenu(); removeProfileNav()">Sign Up & Accept</button>
       </div>
 
       <div id="sign-up-view__keyboard"></div>
