--- a/snapchap/www/main.css
+++ b/snapchap/www/main.css
@@ -41,7 +41,7 @@
   align-items: flex-end;
   height: 60px;
   width: 100vw;
-  position: absolute;
+  position: relative;
   top: 0px;
   padding: 22px 11px 11px 11px;
   z-index: 3;
