--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -12,14 +12,17 @@
               <input type="text" placeholder="Search">
           </label>
       </form>
-
+      <section class="content"> 
+          <input type="text" ng-model="TEST">
+          <button ng-click="test()">SEND MESSAGE</button>
+          <div ng-repeat="item in arr track by $index">
+              <div>{{item}}</div>
+          </div>
+      </section>
 
       <!-- <nav id="chat-view__nav-bottom" class="nav-bottom">
           <button id="chat-view__chat-btn" class="icon-btn"></button>
           <button id="chat-view__take-photo-btn" class="icon-btn" ui-sref="camera"></button>
           <button id="chat-view__dots-btn" class="icon-btn"></button>
       </nav> -->
-
-
-    </ion-content>
 </ion-view>
